--- a/Graph/GraphBasics.ipynb
+++ b/Graph/GraphBasics.ipynb
@@ -26,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Graph:\n",
@@ -43,7 +45,7 @@
     "        if(is_vertex_present) :\n",
     "            return 'already in list'\n",
     "        else :\n",
-    "            self.vertex_list[x] = None\n",
+    "            self.vertex_list[x] = []\n",
     "            self.num_of_vertices += 1\n",
     "            return 'added to list :',x\n",
     "    \n",
@@ -89,6 +91,7 @@
     "            neighbors.append(keys)\n",
     "        return neighbors\n",
     "    \n",
+    "    #Add an edge for a vertex from x to y.\n",
     "    def add_edge(self,x,y):\n",
     "        is_vertex_present = self.check_vertex(x)\n",
     "        is_vertex_present2 = self.check_vertex(y)\n",
@@ -96,31 +99,24 @@
     "            self.add_vertex(x)\n",
     "        if ~is_vertex_present2 :\n",
     "            self.add_vertex(y)\n",
-    "        dest_index = {}\n",
-    "        dest_index[y] = None\n",
-    "        self.vertex_list[x].append(dest_index)\n",
+    "        self.vertex_list[x].append(y)\n",
+    "        self.vertex_list[y].append(x)\n",
     "        \n",
     "    def remove_edge(self,x,y):\n",
-    "        pass\n",
+    "        is_vertex_present = self.check_vertex(x)\n",
+    "        is_vertex_present2 = self.check_vertex(y)\n",
+    "        if ~is_vertex_present1 | ~is_vertex_present2 :\n",
+    "            return \"Edge is not Found\"\n",
+    "        self.vertex_list[x].remove(y)\n",
+    "        self.vertex_list[y].remove(x)\n",
     "    \n",
     "    def get_edge_value(self,x,y):\n",
-    "        is_vertex_present = self.check_vertex(x)\n",
-    "        is_vertex_present2 = self.check_vertex(y)\n",
-    "        if ~is_vertex_present :\n",
-    "            return x,'is not found in the graph'\n",
-    "        if ~is_vertex_present2 :\n",
-    "            return y,'is not found in the graph'\n",
-    "        return self.vertex_list[x][y]\n",
-    "        \n",
+    "        #This is unweighted Graph. So,there is no value for any edge\n",
+    "        pass\n",
+    "    \n",
     "    def set_edge_value(self,x,y,v):\n",
-    "        is_vertex_present = self.check_vertex(x)\n",
-    "        is_vertex_present2 = self.check_vertex(y)\n",
-    "        if ~is_vertex_present :\n",
-    "            return x,'is not found in the graph'\n",
-    "        if ~is_vertex_present2 :\n",
-    "            return y,'is not found in the graph'\n",
-    "        self.vertex_list[x][y] = v\n",
-    "        return 'Updated value of the edge is :',self.vertex_list[x][y]\n",
+    "        #This is unweighted Graph. So,there is no value for any edge    \n",
+    "        pass\n",
     "    \n",
     "    def get_number_of_vertices(self):\n",
     "        return self.num_of_vertices\n",
@@ -135,32 +131,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def main():\n",
-    "    num_of_vertices = int(input(\"Enter number of vertices\"))\n",
+    "    #num_of_vertices = int(input(\"Enter number of vertices\")) \n",
+    "    num_of_vertices = 0\n",
     "    G = Graph(num_of_vertices)\n",
     "    for i in range(1,10):\n",
     "        print G.add_vertex(i*4)\n",
     "    print G.get_number_of_vertices()\n",
     "    G.add_edge(4,12)\n",
-    "    print G.adjacent(4,12) "
+    "    G.add_edge(4,8)\n",
+    "    G.add_edge(4,20)\n",
+    "    G.add_edge(4,32)\n",
+    "    G.add_edge(8,12)\n",
+    "    print \"Is 4 and 12 are Adjacent? \",G.adjacent(4,12) \n",
+    "    for v in G.vertex_list :\n",
+    "        print 'vertex : ', v, ' Neighbors are ' ,G.neighbors(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of vertices0\n",
       "('added to list :', 4)\n",
       "('added to list :', 8)\n",
       "('added to list :', 12)\n",
@@ -170,20 +172,17 @@
       "('added to list :', 28)\n",
       "('added to list :', 32)\n",
       "('added to list :', 36)\n",
-      "9\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-a3c5b7c73933>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mif\u001b[0m  \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m\u001b[1;34m'__main__'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-10-ba99a8dfa6b2>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[1;32mprint\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_vertex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_number_of_vertices\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madjacent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-94f47aa1fdba>\u001b[0m in \u001b[0;36madd_edge\u001b[0;34m(self, x, y)\u001b[0m\n\u001b[1;32m     67\u001b[0m         \u001b[0mdest_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0mdest_index\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvertex_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdest_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mremove_edge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'append'"
+      "9\n",
+      "Is 4 and 12 are Adjacent?  True\n",
+      "vertex :  32  Neighbors are  [4]\n",
+      "vertex :  4  Neighbors are  [12, 8, 20, 32]\n",
+      "vertex :  8  Neighbors are  [4, 12]\n",
+      "vertex :  12  Neighbors are  [4, 8]\n",
+      "vertex :  16  Neighbors are  []\n",
+      "vertex :  20  Neighbors are  [4]\n",
+      "vertex :  24  Neighbors are  []\n",
+      "vertex :  36  Neighbors are  []\n",
+      "vertex :  28  Neighbors are  []\n"
      ]
     }
    ],
