Graph BFS and DFS Implemented

--- a/Graph/GraphBasics.ipynb
+++ b/Graph/GraphBasics.ipynb
@@ -27,14 +27,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Graph:\n",
     "    #Constructor for the class Graph\n",
-    "    # Graph[x] = {{'y',ew},{'z','ew'}}\n",
+    "    # Vertex_list is defined as :\n",
+    "    # vertexA = [vertexB,vertexC,vertexD,vertexE]\n",
+    "    # vertexB = [vertexC]\n",
+    "    # vertexC = [vertexD,vertexE]\n",
+    "    # vertexD = [vertexC,vertexE]\n",
+    "    # vertexE = [vertexB,vertexE]\n",
+    "    \n",
     "    def __init__(self,num_of_vertices):\n",
     "        self.num_of_vertices = num_of_vertices\n",
     "        self.vertex_list = {}\n",
@@ -126,15 +130,67 @@
     "            return True\n",
     "        else :\n",
     "            return False\n",
-    "    "
+    "        \n",
+    "    #Breadth First Search Traversal\n",
+    "    def BFS(self,v):\n",
+    "        visited = {}\n",
+    "        for key in self.vertex_list:\n",
+    "            visited[key] = False\n",
+    "        BFS_output = []\n",
+    "        queue = []\n",
+    "        queue.append(v)\n",
+    "        visited[v] = True\n",
+    "        BFS_Output = []\n",
+    "        BFS_Output.append(v)\n",
+    "        while len(queue) != 0 :\n",
+    "            v = queue.pop()\n",
+    "            for i in self.neighbors(v):\n",
+    "                if visited[i] == False :\n",
+    "                    BFS_Output.append(i)\n",
+    "                    visited[i] = True\n",
+    "                    queue.append(i)\n",
+    "            # if queue length is still 0 then go through all the vertices\n",
+    "            if len(queue) == 0 :\n",
+    "                for key in visited :\n",
+    "                    if visited[key] == False:\n",
+    "                        visited[key] = True\n",
+    "                        BFS_Output.append(key)      \n",
+    "                        queue.append(key)\n",
+    "                        break\n",
+    "        return BFS_Output\n",
+    "        \n",
+    "    # A function used by DFS    \n",
+    "    def DFSUtil(self, v, visited):\n",
+    "        # Mark the current node as visited and print it\n",
+    "        visited[v]= True\n",
+    "        print v,\n",
+    "        # Recur for all the vertices adjacent to\n",
+    "        # this vertex\n",
+    "        for i in self.neighbors(v):\n",
+    "            if visited[i] == False:\n",
+    "                self.DFSUtil(i, visited)\n",
+    " \n",
+    "    # Depth First Search Traversal\n",
+    "    # The function to do DFS traversal. It uses\n",
+    "    # recursive DFSUtil()\n",
+    "    def DFS(self):\n",
+    "        V = self.num_of_vertices  #total vertices\n",
+    "        visited = {}\n",
+    "        # Mark all the vertices as not visited\n",
+    "        for key in self.vertex_list:\n",
+    "            visited[key] = False\n",
+    "        # Call the recursive helper function to print\n",
+    "        # DFS traversal starting from all vertices one\n",
+    "        # by one\n",
+    "        for i in visited:\n",
+    "            if visited[i] == False:\n",
+    "                self.DFSUtil(i, visited)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
@@ -149,14 +205,17 @@
     "    G.add_edge(4,20)\n",
     "    G.add_edge(4,32)\n",
     "    G.add_edge(8,12)\n",
+    "    G.add_edge(24,28)\n",
     "    print \"Is 4 and 12 are Adjacent? \",G.adjacent(4,12) \n",
     "    for v in G.vertex_list :\n",
-    "        print 'vertex : ', v, ' Neighbors are ' ,G.neighbors(v)"
+    "        print 'vertex : ', v, ' Neighbors are ' ,G.neighbors(v)\n",
+    "    print \"BFS Output : \",G.BFS(8)\n",
+    "    print \"DFS Output : \",G.DFS()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,9 +239,11 @@
       "vertex :  12  Neighbors are  [4, 8]\n",
       "vertex :  16  Neighbors are  []\n",
       "vertex :  20  Neighbors are  [4]\n",
-      "vertex :  24  Neighbors are  []\n",
+      "vertex :  24  Neighbors are  [28]\n",
       "vertex :  36  Neighbors are  []\n",
-      "vertex :  28  Neighbors are  []\n"
+      "vertex :  28  Neighbors are  [24]\n",
+      "BFS Output :  [8, 4, 12, 20, 32, 16, 24, 28, 36]\n",
+      "DFS Output :  32 4 12 8 20 16 24 28 36 None\n"
      ]
     }
    ],
