Code : Implemented adj list and adj matrix methods
Implementation of Graphs Adjacency list and adjacency matrix methods in
Python.

--- a/Graph/GraphBasics.ipynb
+++ b/Graph/GraphBasics.ipynb
@@ -273,7 +273,9 @@
     "collapsed": true
    },
    "source": [
-    "Graph implementation "
+    "Object oriented implementation of nodes and graphs can be seen in :   \n",
+    "\n",
+    "https://github.com/saiabhishekgv/DataStructures/blob/master/Graph/GraphBasics_2.ipynb"
    ]
   },
   {
