--- a/Graph/GraphBasics_2.ipynb
+++ b/Graph/GraphBasics_2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -55,10 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 136,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Graph(object):\n",
@@ -108,21 +106,25 @@
     "        Each section in the list will store a list\n",
     "        of tuples that looks like this:\n",
     "        (To Node, Edge Value)\"\"\"\n",
-    "        \n",
-    "        return []\n",
+    "        adj_list = [None]*len(self.nodes)\n",
+    "        for e in self.edges :\n",
+    "            if adj_list[e.node_from.value]:\n",
+    "                adj_list[e.node_from.value].append((e.node_to.value,e.value))\n",
+    "            else :\n",
+    "                adj_list[e.node_from.value] = [(e.node_to.value,e.value)]\n",
+    "        return adj_list\n",
     "    \n",
     "    def get_adjacency_matrix(self):\n",
-    "        \"\"\"Return a matrix, or 2D list.\n",
-    "        Row numbers represent from nodes,\n",
-    "        column numbers represent to nodes.\n",
-    "        Store the edge values in each spot,\n",
-    "        and a 0 if no edge exists.\"\"\"\n",
-    "        return []"
+    "        adjacency_matrix = [[0 for i in range(len(self.nodes)+1)] for j in range(len(self.nodes) + 1)]\n",
+    "\n",
+    "        for edge_object in self.edges:\n",
+    "            adjacency_matrix[edge_object.node_from.value][edge_object.node_to.value] = edge_object.value\n",
+    "        return adjacency_matrix\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -152,8 +154,8 @@
      "output_type": "stream",
      "text": [
       "[[100, 1, 2], [101, 1, 3], [102, 1, 4], [103, 3, 4]]\n",
-      "[]\n",
-      "[]\n"
+      "[None, [(2, 100), (3, 101), (4, 102)], None, [(4, 103)]]\n",
+      "[[0, 0, 0, 0, 0], [0, 0, 100, 101, 102], [0, 0, 0, 0, 0], [0, 0, 0, 0, 103], [0, 0, 0, 0, 0]]\n"
      ]
     }
    ],
@@ -172,6 +174,38 @@
     "3. https://en.wikipedia.org/wiki/Graph_%28abstract_data_type%29\n",
     "4. https://www.youtube.com/watch?v=gXgEDyodOJU"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 10], [7, 8, 9]]\n",
+      "[4, 5, 10]\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "a[1][2]=10\n",
+    "print a\n",
+    "print a[1]\n",
+    "print a[1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
