--- a/Trees/Trees_Basics.ipynb
+++ b/Trees/Trees_Basics.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +156,7 @@
     "\n",
     "    def preorder_print(self, start, traversal):\n",
     "        \"\"\"Helper method - use this to create a \n",
-    "        recursive print solution.\n",
+    "        recursive print solution. (Pre order traversal)\n",
     "            Time Complexity = O(n)\n",
     "        \"\"\"\n",
     "        if start:\n",
@@ -165,12 +165,37 @@
     "            traversal = self.preorder_print(start.right,traversal)\n",
     "        return traversal\n",
     "    \n",
+    "    def preorder_Iter(self,start):\n",
+    "        \"\"\"Helper method - use this to create a \n",
+    "        Iterative Pre order traversal.\n",
+    "           Algorithm :\n",
+    "               1. Create a stack\n",
+    "               2. push root to stack\n",
+    "               3. while stack is not empty :\n",
+    "                   a. pop a node\n",
+    "                   b. print its value\n",
+    "                   c. If right child exists, push the node's right child into stack\n",
+    "                   d. If left child exits, push the node's left child into stack\n",
+    "           Time Complexity = O(n)\n",
+    "        \"\"\"\n",
+    "        stack = []\n",
+    "        stack.append(tree.root)\n",
+    "        traversal = ''\n",
+    "        while len(stack)!=0:\n",
+    "            curr = stack[0]\n",
+    "            traversal += (str(self.print_value(curr)) + '->')\n",
+    "            stack.pop(0)\n",
+    "            if curr.right:\n",
+    "                stack = [curr.right] + stack\n",
+    "            if curr.left:\n",
+    "                stack = [curr.left] + stack\n",
+    "        return traversal\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +204,9 @@
      "text": [
       "True\n",
       "True\n",
-      "1->2->4->6->5->3\n",
-      "4\n"
+      "Pre-order traversal using recursive process:  1->2->4->6->5->3\n",
+      "Height of given tree :  4\n",
+      "Pre-order travesal using iterative process:  1->2->4->6->5->3\n"
      ]
     }
    ],
@@ -203,9 +229,11 @@
     "\n",
     "# Test print_tree\n",
     "# Should be 1-2-4-5-3\n",
-    "print tree.print_tree()\n",
+    "print 'Pre-order traversal using recursive process: ',tree.print_tree()\n",
     "\n",
-    "print tree.height(tree.root)"
+    "print 'Height of given tree : ',tree.height(tree.root)\n",
+    "\n",
+    "print 'Pre-order travesal using iterative process: ',tree.preorder_Iter(tree.root)[:-2]"
    ]
   },
   {
