Feat : C++ implementation for Lowest Common ancestor in a tree implemented

--- a/Trees/LowestCommonAncestor.ipynb
+++ b/Trees/LowestCommonAncestor.ipynb
@@ -15,6 +15,9 @@
    "source": [
     "# Answer :\n",
     "\n",
+    "According to the definition of LCA on Wikipedia: “The lowest common ancestor is defined between two nodes v and w as the lowest node in T that has both v and w as descendants (where we allow a node to be a descendant of itself).”\n",
+    "\n",
+    "\n",
     "## Method 1 : \n",
     "- Make ancestors list for both nodes and then findout where they first differ. The nodes immediately above this divergence is the node we are looking for. It works for all trees with O(n) as worst case time complexity. \n",
     "- But, in this case, we are using BST which already have special properties. If we can make use of this properties, we might come up with more effecient algorithm.\n",
@@ -185,6 +188,58 @@
     "print tree.findLowestAncestor2(51,62) \n",
     "print tree.findLowestAncestor2(8,20) \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# C++ implementation :\n",
+    "  \n",
+    "  # Recursive :"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "class Trees {\n",
+    "public:\n",
+    "    TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {\n",
+    "        if(root==NULL) return root;\n",
+    "        if(p->val > root->val && q->val >root->val)\n",
+    "            return lowestCommonAncestor(root->right,p,q);\n",
+    "        else if(p->val<root->val && q->val<root->val)\n",
+    "            return lowestCommonAncestor(root->left,p,q);\n",
+    "        return root;\n",
+    "    }\n",
+    "}; "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterative :"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "class Trees {\n",
+    "public:\n",
+    "    TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {\n",
+    "        TreeNode* cur = root;\n",
+    "        while (true) {\n",
+    "            if (p -> val < cur -> val && q -> val < cur -> val)\n",
+    "                cur = cur -> left;\n",
+    "            else if (p -> val > cur -> val && q -> val > cur -> val)\n",
+    "                cur = cur -> right;\n",
+    "            else return cur; \n",
+    "        }\n",
+    "    }\n",
+    "};"
    ]
   },
   {
