Feat: Updated Method for balancing tree

--- a/Trees/Binary Tree to Heap.ipynb
+++ b/Trees/Binary Tree to Heap.ipynb
@@ -63,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Binary Tree \n",
