--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -32,8 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def question1(s,t):\n",
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +88,107 @@
     "# Answer  :\n",
     "\n",
     "Using brute force technique, check each substring whether the substring is a palindrome or not. We can run three loops, the outer two loops pick all substrings one by one by fixing the corner characters, the inner loop checks whether the picked substring is palindrome or not.This approach can take up to O(n^3) time in worst case. n=length of string. \n",
-    "\n"
+    "\n",
+    "Using hashmap, store the indices of each character. Now, for each character whose frequency is greater than 1, get the maximum palindromic sequence using this character as starting point of the palindrome. Out of all sequences, return the palindromic string which has maximum length. It will take O(n^2) in worst case, n = length of string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def question2(a):\n",
+    "    if len(a) == 1:\n",
+    "        return a\n",
+    "    elif len(a) == 2:\n",
+    "        if(a[0]==a[1]):\n",
+    "            return a\n",
+    "        else:\n",
+    "            return a[0]\n",
+    "    else:\n",
+    "        hashMap = {}\n",
+    "        for i in range(0,len(a)) : \n",
+    "            if a[i] in hashMap:\n",
+    "                hashMap[a[i]].append(i)\n",
+    "            else:\n",
+    "                hashMap[a[i]] = [i]\n",
+    "        print hashMap\n",
+    "        max_length = 1\n",
+    "        longest_substring = a[0]\n",
+    "        for i in hashMap:\n",
+    "            if len(hashMap[i])>1:\n",
+    "                temp_longest_substring = isPalindrome(a,hashMap[i])\n",
+    "                temp_max_length = len(temp_longest_substring)\n",
+    "                if max_length < temp_max_length:\n",
+    "                    max_length = temp_max_length\n",
+    "                    longest_substring = temp_longest_substring\n",
+    "                if max_length == len(a):\n",
+    "                    break\n",
+    "        return longest_substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def isPalindrome(a , index_list):\n",
+    "    max_length = 0\n",
+    "    longest_substring = \"\"\n",
+    "    for i in range(0,len(index_list)):\n",
+    "        for j in range(i+1,len(index_list)):\n",
+    "            if isPalindromeIndex(a,index_list[i],index_list[j]) and max_length<(index_list[j]-index_list[i]+1): \n",
+    "                longest_substring = a[index_list[i]:index_list[j]+1]\n",
+    "                max_length = len(longest_substring)\n",
+    "    return longest_substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def isPalindromeIndex(a, i ,j):\n",
+    "    while(i<j):\n",
+    "        if a[i].lower() != a[j].lower() :\n",
+    "            return False\n",
+    "        i = i+1\n",
+    "        j = j-1\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': [0, 4, 5], 'c': [2], 'b': [1], 'd': [3]}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'aa'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question2(\"abcdaa\")"
    ]
   },
   {
