--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -192,6 +192,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 3 :\n",
+    "\n",
+    "Given an undirected graph G, find the minimum spanning tree within G. A minimum spanning tree connects all vertices in a graph with the smallest possible total weight of edges. Your function should take in and return an adjacency list structured like this:\n",
+    "\n",
+    "{'A': [('B', 2)],\n",
+    " 'B': [('A', 2), ('C', 5)], \n",
+    " 'C': [('B', 5)]}\n",
+    "Vertices are represented as unique strings. \n",
+    "The function definition should be question3(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 5 :\n",
+    "\n",
+    "Find the element in a singly linked list that's m elements from the end. For example, if a linked list has 5 elements, the 3rd element from the end is the 3rd element. The function definition should look like question5(ll, m), where ll is the first node of a linked list and m is the \"mth number from the end\". You should copy/paste the Node class below to use as a representation of a node in the linked list. Return the value of the node at that position."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Answer : \n",
+    "\n",
+    "Ae we don't know how many nodes are there in Linked List. Traversing list and getting the number of nodes count and then again traversing list using this (count-m) iterations will yield the result. But this approach will take 2 times traversing list and it might be costlier if we have a large list.\n",
+    "\n",
+    "\n",
+    "So, in order to get rid of this problem, using two pointers will help to solve this with one traversal. First pointer traverse to k nodes and second pointer starts traversing from root. Both will increment in each step until first pointer reaches end of nodes and p will be at (n-k)th node. It will take O(n) time complexity a\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Node(object):\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def question5(ll,m):\n",
+    "    p, q = ll, ll\n",
+    "    \n",
+    "    for i in range(0,m):\n",
+    "        if q == None :\n",
+    "            print \"List doesn't have \",m,\" nodes\"\n",
+    "            return\n",
+    "        q = q.next\n",
+    "        \n",
+    "    while(q != None): \n",
+    "        p = p.next \n",
+    "        q = q.next\n",
+    "    print p.data  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = Node(1)\n",
+    "temp = root \n",
+    "for i in range(2,51):\n",
+    "    new_temp = Node(i)\n",
+    "    temp.next = new_temp\n",
+    "    temp = temp.next\n",
+    "\n",
+    "question5(root,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
