--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -197,13 +197,194 @@
    "source": [
     "# Question 3 :\n",
     "\n",
-    "Given an undirected graph G, find the minimum spanning tree within G. A minimum spanning tree connects all vertices in a graph with the smallest possible total weight of edges. Your function should take in and return an adjacency list structured like this:\n",
-    "\n",
+    "Given an undirected graph G, find the minimum spanning tree within G. A minimum spanning tree connects all vertices in a graph with the smallest possible total weight of edges. Your function should take in and return an adjacency list structured like this:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "{'A': [('B', 2)],\n",
     " 'B': [('A', 2), ('C', 5)], \n",
-    " 'C': [('B', 5)]}\n",
+    " 'C': [('B', 5)]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Vertices are represented as unique strings. \n",
     "The function definition should be question3(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Answer :\n",
+    "\n",
+    "Depth First Traversal will help to go deeper into a graph and also, making sure all nodes are visited at the end. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def question3(G):\n",
+    "    visited = {}\n",
+    "    # Mark all the vertices as not visited\n",
+    "    for key in G:\n",
+    "        visited[key] = False   \n",
+    "    for i in visited:\n",
+    "        if visited[i] == False:\n",
+    "            DFSUtil(G,i, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function used by DFS    \n",
+    "def DFSUtil(G, v, visited):\n",
+    "    # Mark the current node as visited and print it\n",
+    "    visited[v]= True\n",
+    "    print v,\n",
+    "    # Recur for all the vertices adjacent to\n",
+    "    # this vertex\n",
+    "    for i in G[v]:\n",
+    "        (key,value) = i\n",
+    "        if visited[key] == False:\n",
+    "            DFSUtil(G,key, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A C B\n"
+     ]
+    }
+   ],
+   "source": [
+    "question3({'A': [('C', 2)],'B': [('A', 2), ('C', 5)], 'C': [('B', 5)]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 4 : \n",
+    "Find the least common ancestor between two nodes on a binary search tree. The least common ancestor is the farthest node from the root that is an ancestor of both nodes. For example, the root is a common ancestor of all nodes on the tree, but if both nodes are descendents of the root's left child, then that left child might be the lowest common ancestor. You can assume that both nodes are in the tree, and the tree itself adheres to all BST properties. The function definition should look like question4(T, r, n1, n2), where T is the tree represented as a matrix, where the index of the list is equal to the integer stored in that node and a 1 represents a child node, r is a non-negative integer representing the root, and n1 and n2 are non-negative integers representing the two nodes in no particular order. For example, one test case might be"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "question4([[0, 1, 0, 0, 0],\n",
+    "           [0, 0, 0, 0, 0],\n",
+    "           [0, 0, 0, 0, 0],\n",
+    "           [1, 0, 0, 0, 1],\n",
+    "           [0, 0, 0, 0, 0]],\n",
+    "          3,\n",
+    "          1,\n",
+    "          4)\n",
+    "\n",
+    "Answer : 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Answer : \n",
+    "\n",
+    "Here, traversing all the nodes and getting the roots of each nodes. Taking the Least common ancestor for each node. It requires two traversals for getting roots of nodes n1 and n2 and also space for storing list of all the nodes. Again, in this list we need to take least common ancestor which will take O(n) ==> n number of common ancestors. \n",
+    "\n",
+    "Instead, if the root node value is in between n1 and n2 then this is the Least Common Ancestor. If root value is greater than n1 and n2, then the least common ancestor will be in left of the root. So make left child of root as new root and traverse this new root. Similarly, if root is less than n1 and n2 then Least Common Ancestor will be on the right side of the root. This will O(log n) time Complexity in average case. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def question4(T, r, n1, n2):\n",
+    "    while True : \n",
+    "        if r>n1 and r<n2 : \n",
+    "            return r\n",
+    "        \n",
+    "        elif r>n1 and r>n2 :\n",
+    "            #left traverse\n",
+    "            for i in range(0,len(T[0])):\n",
+    "                if T[r][i] == 1 :\n",
+    "                    if i!=n1 and i!=n2 :\n",
+    "                        r = i\n",
+    "                        break\n",
+    "                    else : \n",
+    "                        return r\n",
+    "        \n",
+    "        elif r<n1 and r<n2 :\n",
+    "            # right traverse\n",
+    "            counter = 0\n",
+    "            for i in range(0,len(T[0])):\n",
+    "                if T[r][i] == 1 :\n",
+    "                    counter += 1\n",
+    "                    \n",
+    "            for i in range(0,len(T[0])):\n",
+    "                if counter == 2 and T[r][i] == 1:\n",
+    "                    counter -= 1\n",
+    "                if counter == 1 and T[r][i] == 1 :\n",
+    "                    if i!=n1 and i!=n2 :\n",
+    "                        r = i\n",
+    "                        break\n",
+    "                    else : \n",
+    "                        return r\n",
+    "        \n",
+    "        else :\n",
+    "            print \"No root is present for given nodes\"\n",
+    "            return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question4([[0, 0, 0, 0, 0],\n",
+    "           [1, 0, 1, 0, 0],\n",
+    "           [0, 0, 0, 0, 0],\n",
+    "           [0, 1, 0, 0, 1],\n",
+    "           [0, 0, 0, 0, 0]],\n",
+    "          3,\n",
+    "          1,\n",
+    "          4)"
    ]
   },
   {
@@ -224,13 +405,12 @@
     "Ae we don't know how many nodes are there in Linked List. Traversing list and getting the number of nodes count and then again traversing list using this (count-m) iterations will yield the result. But this approach will take 2 times traversing list and it might be costlier if we have a large list.\n",
     "\n",
     "\n",
-    "So, in order to get rid of this problem, using two pointers will help to solve this with one traversal. First pointer traverse to k nodes and second pointer starts traversing from root. Both will increment in each step until first pointer reaches end of nodes and p will be at (n-k)th node. It will take O(n) time complexity a\n",
-    "\n"
+    "So, in order to get rid of this problem, using two pointers will help to solve this with one traversal. First pointer traverse to k nodes and second pointer starts traversing from root. Both will increment in each step until first pointer reaches end of nodes and p will be at (n-k)th node. It will take O(n) time complexity and two pointers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -244,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -286,24 +466,6 @@
     "\n",
     "question5(root,3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
