Code : Sample  files

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -26,13 +26,13 @@
     "    3. Now, traverse string t. For each character in t :\n",
     "        a. Look whether the character is in dict or not. If yes and value is true, continue, else return false.\n",
     "        \n",
-    "Time Complexity : O(m+n) m-length of string t, n- length of string s.\n",
-    "As we are traversing two string only once. Traversing of string s will take O(m) and traversing of string t will take O(n) time. "
+    "Time Complexity : O(n) n- length of string s.\n",
+    "As we are traversing two string only once. Traversing of string s will take O(m) and space complexity is O(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
     "    flags = dict()# size of 128 assumes ASCII\n",
     "    for i in range(0,len(s)) :\n",
     "        flags[s[i].lower()] = True\n",
-    "\n",
+    "        \n",
     "    for i in range(0,len(t)):\n",
     "        if (t[i].lower()) not in flags :\n",
     "            return False\n",
@@ -52,13 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True\n",
+      "False\n",
       "True\n"
      ]
     }
@@ -68,7 +70,19 @@
     "t = \"str\"\n",
     "\n",
     "#should return true\n",
-    "print question1(s,t) "
+    "print question1(s,t) \n",
+    "\n",
+    "s = \"\"\n",
+    "t = \"Input\"\n",
+    "\n",
+    "#should return true\n",
+    "print question1(s,t) \n",
+    "\n",
+    "s = \"InputStringIsThisAnAnagram\"\n",
+    "t = \"str\"\n",
+    "\n",
+    "#should return true\n",
+    "print question1(s,t) \n"
    ]
   },
   {
@@ -89,16 +103,20 @@
     "\n",
     "Using brute force technique, check each substring whether the substring is a palindrome or not. We can run three loops, the outer two loops pick all substrings one by one by fixing the corner characters, the inner loop checks whether the picked substring is palindrome or not.This approach can take up to O(n^3) time in worst case. n=length of string. \n",
     "\n",
-    "Using hashmap, store the indices of each character. Now, for each character whose frequency is greater than 1, get the maximum palindromic sequence using this character as starting point of the palindrome. Out of all sequences, return the palindromic string which has maximum length. It will take O(n^2) in worst case, n = length of string."
+    "Using hashmap, store the indices of each character. Now, for each character whose frequency is greater than 1, get the maximum palindromic sequence using this character as starting point of the palindrome. Out of all sequences, return the palindromic string which has maximum length and O(1) space complexity. It will take O(n^2) in worst case, n = length of string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def question2(a):\n",
+    "    if len(a) == 0:\n",
+    "        return \"Empty String input is given\"\n",
     "    if len(a) == 1:\n",
     "        return a\n",
     "    elif len(a) == 2:\n",
@@ -113,7 +131,6 @@
     "                hashMap[a[i]].append(i)\n",
     "            else:\n",
     "                hashMap[a[i]] = [i]\n",
-    "        print hashMap\n",
     "        max_length = 1\n",
     "        longest_substring = a[0]\n",
     "        for i in hashMap:\n",
@@ -130,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -166,29 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': [0, 4, 5], 'c': [2], 'b': [1], 'd': [3]}\n"
+      "aa\n",
+      "ldldldldl\n",
+      "Empty String input is given\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'aa'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "question2(\"abcdaa\")"
+    "print question2(\"abcdaa\")\n",
+    "print question2(\"abdaabsbasfasdadbsasdasasdaasassaassvsadbsdbasdjsssalllskdlldldldldl\")\n",
+    "print question2(\"\")"
    ]
   },
   {
@@ -223,61 +234,87 @@
    "source": [
     "# Answer :\n",
     "\n",
-    "Depth First Traversal will help to go deeper into a graph and also, making sure all nodes are visited at the end. "
+    "Kruskal's Algorithm is used to find the minimum spanning tree. Time Complexity of this algorithm is O(E log E+ E log V)and  O(V) space complexity, to store the parent and the rank of all vertices."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def question3(G):\n",
-    "    visited = {}\n",
-    "    # Mark all the vertices as not visited\n",
-    "    for key in G:\n",
-    "        visited[key] = False   \n",
-    "    for i in visited:\n",
-    "        if visited[i] == False:\n",
-    "            DFSUtil(G,i, visited)"
+    "    mst = []\n",
+    "    edges = []\n",
+    "    for vertex in G : \n",
+    "        for edge in G[vertex]:\n",
+    "            (anotherVertex, weight) = edge\n",
+    "            if vertex < anotherVertex :\n",
+    "                edges.append([vertex,anotherVertex, weight])\n",
+    "    edges = sorted(edges, key=lambda edges:edges[2])\n",
+    "    \n",
+    "    vertices = []\n",
+    "    parent = {} ; rank = {}\n",
+    "    for vertex in G:\n",
+    "        vertices.append(vertex)\n",
+    "        parent[vertex] = vertex\n",
+    "        rank[vertex] = 0\n",
+    "    \n",
+    "    index = 0\n",
+    "    edgeCount = 0\n",
+    "    while edgeCount < len(vertices)-1 : \n",
+    "        u,v,w = edges[index]\n",
+    "        index += 1\n",
+    "        \n",
+    "        u_parent = find(parent, u)\n",
+    "        v_parent = find(parent ,v)\n",
+    "        \n",
+    "        if u_parent!=v_parent : \n",
+    "            edgeCount += 1\n",
+    "            mst.append([u,v,w])\n",
+    "            union(parent,rank,u_parent,v_parent)\n",
+    "    print mst\n",
+    "    \n",
+    "def union(parent,rank,u_parent,v_parent):\n",
+    "    xroot = find(parent, u_parent)\n",
+    "    yroot = find(parent, v_parent)\n",
+    "    if rank[xroot] < rank[yroot]:\n",
+    "            parent[xroot] = yroot\n",
+    "    elif rank[xroot] > rank[yroot]:\n",
+    "            parent[yroot] = xroot\n",
+    "    else :\n",
+    "            parent[yroot] = xroot\n",
+    "            rank[xroot] += 1\n",
+    "\n",
+    "def find(parent, i):\n",
+    "    if parent[i] == i:\n",
+    "        return i\n",
+    "    return find(parent, parent[i])\n",
+    "        \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A function used by DFS    \n",
-    "def DFSUtil(G, v, visited):\n",
-    "    # Mark the current node as visited and print it\n",
-    "    visited[v]= True\n",
-    "    print v,\n",
-    "    # Recur for all the vertices adjacent to\n",
-    "    # this vertex\n",
-    "    for i in G[v]:\n",
-    "        (key,value) = i\n",
-    "        if visited[key] == False:\n",
-    "            DFSUtil(G,key, visited)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A C B\n"
+      "[['A', 'B', 2], ['B', 'C', 5]]\n",
+      "[['A', 'C', 2], ['B', 'C', 6]]\n",
+      "[['C', 'D', 4], ['A', 'D', 5], ['A', 'B', 10]]\n"
      ]
     }
    ],
    "source": [
-    "question3({'A': [('C', 2)],'B': [('A', 2), ('C', 5)], 'C': [('B', 5)]})"
+    "question3({'A': [('B', 2)],'B': [('A', 2), ('C', 5)], 'C': [('B', 5)]})\n",
+    "question3({'A': [('C', 2)],'B': [('C',6)], 'C': [('A', 5),('B',6)]})\n",
+    "question3({'A': [('B',10),('C', 6),('D', 5)],'B': [('A',10),('D', 15)], 'C': [('A', 6),('D', 4)], 'D':[('A', 5),('B',15),('C',4)]})"
    ]
   },
   {
@@ -317,13 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def question4(T, r, n1, n2):\n",
+    "    prev_r = r\n",
     "    while True : \n",
     "        if r>n1 and r<n2 : \n",
     "            return r\n",
@@ -337,7 +375,9 @@
     "                        break\n",
     "                    else : \n",
     "                        return r\n",
-    "        \n",
+    "            prev_r = r\n",
+    "            if prev_r == r :\n",
+    "                return \"Check the structure of tree, No LCA Found\"\n",
     "        elif r<n1 and r<n2 :\n",
     "            # right traverse\n",
     "            counter = 0\n",
@@ -354,37 +394,34 @@
     "                        break\n",
     "                    else : \n",
     "                        return r\n",
+    "            prev_r = r\n",
+    "            if prev_r == r :\n",
+    "                return \"Check the structure of tree, No LCA Found\"\n",
     "        \n",
     "        else :\n",
-    "            print \"No root is present for given nodes\"\n",
-    "            return"
+    "            return \"No root is present for given nodes\"\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Check the structure of tree, No LCA Found\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "question4([[0, 0, 0, 0, 0],\n",
-    "           [1, 0, 1, 0, 0],\n",
-    "           [0, 0, 0, 0, 0],\n",
-    "           [0, 1, 0, 0, 1],\n",
-    "           [0, 0, 0, 0, 0]],\n",
-    "          3,\n",
-    "          1,\n",
-    "          4)"
+    "print question4([[0, 0, 0, 0, 0], [1, 0, 1, 0, 0], [0, 0, 0, 0, 0], [0, 1, 0, 0, 1], [0, 0, 0, 0, 0]], 3, 1, 4)\n",
+    "print question4([[0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]], 0, 1, 4)\n",
+    "print question4([[0, 0, 1, 0, 4], [0, 1, 0, 1, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]], 0, 2, 3)"
    ]
   },
   {
@@ -405,12 +442,12 @@
     "Ae we don't know how many nodes are there in Linked List. Traversing list and getting the number of nodes count and then again traversing list using this (count-m) iterations will yield the result. But this approach will take 2 times traversing list and it might be costlier if we have a large list.\n",
     "\n",
     "\n",
-    "So, in order to get rid of this problem, using two pointers will help to solve this with one traversal. First pointer traverse to k nodes and second pointer starts traversing from root. Both will increment in each step until first pointer reaches end of nodes and p will be at (n-k)th node. It will take O(n) time complexity and two pointers."
+    "So, in order to get rid of this problem, using two pointers will help to solve this with one traversal. First pointer traverse to k nodes and second pointer starts traversing from root. Both will increment in each step until first pointer reaches end of nodes and p will be at (n-k)th node. It will take O(n) time complexity and two pointers and O(1) space complexity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -424,48 +461,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "def question5(ll,m):\n",
     "    p, q = ll, ll\n",
-    "    \n",
     "    for i in range(0,m):\n",
     "        if q == None :\n",
-    "            print \"List doesn't have \",m,\" nodes\"\n",
-    "            return\n",
+    "            return ('List doesnt have',m,'nodes')\n",
     "        q = q.next\n",
     "        \n",
     "    while(q != None): \n",
     "        p = p.next \n",
     "        q = q.next\n",
-    "    print p.data  "
+    "    \n",
+    "    return p.data  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = Node(1)\n",
     "temp = root \n",
     "for i in range(2,51):\n",
     "    new_temp = Node(i)\n",
     "    temp.next = new_temp\n",
-    "    temp = temp.next\n",
-    "\n",
-    "question5(root,3)"
+    "    temp = temp.next"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "('List doesnt have', 77, 'nodes')\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "print question5(root,3)\n",
+    "print question5(root, 77)\n",
+    "print question5(root,25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
