--- a/Graph/GraphBasics.ipynb
+++ b/Graph/GraphBasics.ipynb
@@ -10,6 +10,8 @@
     "1. A finite set of vertices also called as nodes.\n",
     "2. A finite set of ordered pair of the form (u, v) called as edge. The pair is ordered because (u, v) is not same as (v, u) in case of directed graph(di-graph). The pair of form (u, v) indicates that there is an edge from vertex u to vertex v. The edges may contain weight/value/cost.\n",
     "\n",
+    "A graph with no cycles is called an acyclic graph. A directed graph with no cycles is called a directed acyclic graph or a DAG.\n",
+    "\n",
     "The basic operations provided by a graph data structure G usually include:\n",
     "1. adjacent(G, x, y): tests whether there is an edge from the vertex x to the vertex y;\n",
     "2. neighbors(G, x): lists all vertices y such that there is an edge from the vertex x to the vertex y;\n",
